--- a/state-machine/responses/achieve_transitions/A2.md
+++ b/state-machine/responses/achieve_transitions/A2.md
@@ -1,8 +1,8 @@
 ## Response to the AI
 
-1. Read the plan.md file to identify which acceptance criteria were addressed
-2. Update the plan.md file to mark completed acceptance criteria
-3. Create a new task.md file for the next logical task based on remaining acceptance criteria
+1. Read the `.ai/task/plan.md` file to identify which acceptance criteria were addressed
+2. Update the `.ai/task/plan.md` file to mark completed acceptance criteria
+3. Create a new `.ai/task/task.md` file for the next logical task based on remaining acceptance criteria
 
 Task Results Content:
 [TASK_RESULTS_PLACEHOLDER]
@@ -22,4 +22,4 @@ We're now ready to define our next task based on the remaining acceptance criter
 - **Lumos**: Show current state and available actions
 
 ### Next Steps
-Review the proposed next task I've created, modify it if needed, then use Accio to execute it when you're ready.
+Review the proposed next task I've created at `.ai/task/task.md`, modify it if needed, then use Accio to execute it when you're ready.
