Lumos transition responses

--- a/state-machine/responses/lumos_transitions/L15.md
+++ b/state-machine/responses/lumos_transitions/L15.md
@@ -11,14 +11,15 @@ You need to confirm whether to restart the entire PR review process from comment
 ### Available Spells
 - **Reparo**: Confirms restart - deletes existing review files and gathers new PR comments
 - **Reverto**: Cancels restart - returns to task execution without restarting
+- **Accio**: Cancels restart - continues with the existing review task without restarting
 - **Lumos**: Shows your current state and available actions
 
 ### Unavailable Spells
-- **Accio**: Not available during this confirmation step
-- **Finite**: Not available during this confirmation step
-- **Expecto**: Not available during PR review (only during planning)
+- **Finite**: Not available during this confirmation step. Finite would return you to plan editing, but you must first resolve the confirmation request with either **Reparo** (confirm restart) or **Reverto** (cancel).
+- **Expecto**: Not available during PR review. Expecto would enrich your plan with information from Atlassian resources (Jira and Confluence), but you need to first resolve this confirmation step and return to plan editing.
 
 ### Next Steps
 Choose whether to restart the PR review process or cancel:
 - Use **Reparo** to confirm and restart the entire PR review process
 - Use **Reverto** to cancel and return to task execution
+- Use **Accio** to cancel restart but continue with the existing review task
