--- a/state-machine/responses/lumos_transitions/L17.md
+++ b/state-machine/responses/lumos_transitions/L17.md
@@ -12,9 +12,9 @@ You're in an error state because the task results file is missing when you shoul
 - **Lumos**: Shows your current state and available actions
 
 ### Unavailable Spells
-- **Reparo**: Not available until the error is resolved
-- **Reverto**: Not available because you're not in a PR review workflow
-- **Expecto**: Not available during task execution phases (only during planning)
+- **Reparo**: Not available until the error is resolved. Reparo would initiate a PR review process to gather PR comments, but you need to first recover from the error state using **Accio**.
+- **Reverto**: Not available because you're not in a PR review workflow. Reverto is used to exit the PR review process and return to your previous workflow.
+- **Expecto**: Not available during task execution phases. Expecto would enrich your plan with information from Atlassian resources (Jira and Confluence), but you first need to return to plan editing with **Finite**.
 
 ### Next Steps
 Use **Accio** to recover from this error. If task-results.md exists elsewhere, it will be used; otherwise, the incomplete task will be archived and a new task created.
