--- a/state-machine/responses/lumos_transitions/L18.md
+++ b/state-machine/responses/lumos_transitions/L18.md
@@ -9,10 +9,10 @@ You're in an error state because the plan file is missing when it's required for
 - **Lumos**: Shows your current state and available actions
 
 ### Unavailable Spells
-- **Finite**: Not available because there's no plan to return to
-- **Reparo**: Not available until the error is resolved
-- **Reverto**: Not available because you're not in a PR review workflow
-- **Expecto**: Not available because there's no plan to enrich
+- **Finite**: Not available because there's no plan to return to. Finite would normally return you to plan editing, but since the plan is missing, there's nothing to edit.
+- **Reparo**: Not available until the error is resolved. Reparo would initiate a PR review process to gather PR comments, but you need to first create a plan with **Accio**.
+- **Reverto**: Not available because you're not in a PR review workflow. Reverto is used to exit the PR review process and return to your previous workflow.
+- **Expecto**: Not available because there's no plan to enrich. Expecto would enrich your plan with information from Atlassian resources, but you need to first create a plan with **Accio**.
 
 ### Next Steps
 Use **Accio** to create a new plan file and recover from this error.
