--- a/state-machine/responses/lumos_transitions/L20.md
+++ b/state-machine/responses/lumos_transitions/L20.md
@@ -11,10 +11,10 @@ You're in an error state because the PR review task file is missing when you're 
 - **Lumos**: Shows your current state and available actions
 
 ### Unavailable Spells
-- **Finite**: Not available until the error is resolved
-- **Reparo**: Not available until the error is resolved
-- **Reverto**: Not available in error states
-- **Expecto**: Not available during PR review (only during planning)
+- **Finite**: Not available until the error is resolved. Finite would return you to plan editing, but you need to first recover from this error state by using **Accio** to create a new review task.
+- **Reparo**: Not available until the error is resolved. Reparo would initiate a new PR review process, but you're already in one with an error. Use **Accio** to recreate the review task file first.
+- **Reverto**: Not available in error states. Reverto would normally cancel the PR review process, but in this error state it's disabled for safety. Use **Accio** to recover first.
+- **Expecto**: Not available during PR review. Expecto would enrich your plan with information from Atlassian resources (Jira and Confluence), but you need to first complete or cancel the PR review process.
 
 ### Next Steps
 Use **Accio** to create a new review task file based on the PR comments and recover from this error.
