--- a/state-machine/responses/lumos_transitions/L9.md
+++ b/state-machine/responses/lumos_transitions/L9.md
@@ -10,13 +10,13 @@ You are drafting tasks to address PR review comments after entering from task ex
 
 ### Available Spells
 - **Accio**: Executes the current review task and documents results
-- **Finite**: Not recommended; you should first complete or cancel the PR review flow
+- **Finite**: Returns to plan editing while in the middle of PR review. Using this will leave the PR review process incomplete. Consider using **Accio** to complete the review or **Reverto** to properly cancel it first.
 - **Reverto**: Cancels the PR review process and returns to task execution
 - **Lumos**: Shows your current state and available actions
 
 ### Unavailable Spells
-- **Reparo**: Not available because you're already in a PR review workflow
-- **Expecto**: Not available during PR review (only during planning)
+- **Reparo**: Not available because you're already in a PR review workflow. Reparo is used to start a new PR review, but you're already in the middle of one. If you need to restart the PR review process, use **Reverto** to exit first, then **Reparo** to start again.
+- **Expecto**: Not available during PR review. Expecto would enrich your plan with information from Atlassian resources (Jira and Confluence), but you need to exit the PR review flow first with **Reverto** or **Finite**, then use Expecto during plan editing.
 
 ### Next Steps
 Review and refine the tasks in `.ai/task/review-task.md`, then use **Accio** to execute them when ready. If you want to exit the PR review flow, use **Reverto**.
