--- a/state-machine/responses/lumos_transitions/L11.md
+++ b/state-machine/responses/lumos_transitions/L11.md
@@ -14,10 +14,10 @@ You have completed PR review tasks and need to archive the results before contin
 - **Lumos**: Shows your current state and available actions
 
 ### Unavailable Spells
-- **Finite**: Not available until you archive the review results with Accio
-- **Reparo**: Not available until you archive the current review results
-- **Reverto**: Not available in this phase (must use Accio to complete the process)
-- **Expecto**: Not available during PR review (only during planning)
+- **Finite**: Not available until you archive the review results with Accio. Finite would return you to plan editing, but you must first archive your PR review results with **Accio** to ensure your changes are properly integrated.
+- **Reparo**: Not available until you archive the current review results. Reparo would initiate a new PR review process, but you need to complete the current one first by using **Accio** to archive the results.
+- **Reverto**: Not available in this phase. Reverto would normally cancel the PR review process, but at this stage you've already completed the review work and must use **Accio** to properly save and archive your progress.
+- **Expecto**: Not available during PR review. Expecto would enrich your plan with information from Atlassian resources (Jira and Confluence), but you need to first archive your review results with **Accio** and return to plan editing.
 
 ### Next Steps
 Use **Accio** to archive your PR review results, update the plan with a summary of changes made, and return to task execution.
