--- a/state-machine/responses/lumos_transitions/L12.md
+++ b/state-machine/responses/lumos_transitions/L12.md
@@ -8,14 +8,15 @@ You need to confirm whether to restart the PR comments gathering process. You we
 ### Available Spells
 - **Reparo**: Confirms restart - deletes existing comments and gathers new PR comments
 - **Reverto**: Cancels restart - returns to plan editing without gathering new comments
+- **Accio**: Cancels restart - continues with existing PR comments without restarting
 - **Lumos**: Shows your current state and available actions
 
 ### Unavailable Spells
-- **Accio**: Not available during this confirmation step
-- **Finite**: Not available during this confirmation step
-- **Expecto**: Not available during PR review (only during planning)
+- **Finite**: Not available during this confirmation step. Finite would return you to plan editing, but you must first resolve the confirmation request with either **Reparo** (confirm restart) or **Reverto** (cancel).
+- **Expecto**: Not available during PR review. Expecto would enrich your plan with information from Atlassian resources (Jira and Confluence), but you need to first resolve this confirmation step and return to plan editing.
 
 ### Next Steps
 Choose whether to proceed with gathering new PR comments or cancel:
 - Use **Reparo** to confirm and restart the PR comments gathering process
 - Use **Reverto** to cancel and return to plan editing
+- Use **Accio** to cancel restart but continue with the existing PR comments
