--- a/state-machine/responses/lumos_transitions/L19.md
+++ b/state-machine/responses/lumos_transitions/L19.md
@@ -11,9 +11,9 @@ You're in an error state because the PR comments file is missing when you're in 
 - **Lumos**: Shows your current state and available actions
 
 ### Unavailable Spells
-- **Reparo**: Not available until the error is resolved
-- **Reverto**: Not available in error states
-- **Expecto**: Not available during PR review (only during planning)
+- **Reparo**: Not available until the error is resolved. Reparo would initiate a new PR review process, but you're already in one with an error. Use **Accio** to recreate the comments file or **Finite** to exit the PR review process.
+- **Reverto**: Not available in error states. Reverto would normally cancel the PR review process, but in this error state it's disabled for safety. Use **Accio** to recover or **Finite** to exit completely.
+- **Expecto**: Not available during PR review. Expecto would enrich your plan with information from Atlassian resources (Jira and Confluence), but you need to first exit the PR review flow with **Finite** and return to plan editing.
 
 ### Next Steps
 Use **Accio** to create a new comments.md file and gather PR comments, or use **Finite** to abandon the PR review and return to plan editing.
