--- a/state-machine/responses/lumos_transitions/L21.md
+++ b/state-machine/responses/lumos_transitions/L21.md
@@ -12,10 +12,10 @@ You're in an error state because the PR review task results file is missing when
 - **Lumos**: Shows your current state and available actions
 
 ### Unavailable Spells
-- **Finite**: Not available until the error is resolved
-- **Reparo**: Not available until the error is resolved
-- **Reverto**: Not available in error states
-- **Expecto**: Not available during PR review (only during planning)
+- **Finite**: Not available until the error is resolved. Finite would return you to plan editing, but you need to first recover from the error state using **Accio** to re-execute the review task.
+- **Reparo**: Not available until the error is resolved. Reparo would initiate a new PR review process, but you need to first complete the current one by using **Accio**.
+- **Reverto**: Not available in error states. Reverto would normally cancel the PR review process, but you need to first recover from the error state using **Accio**.
+- **Expecto**: Not available during PR review. Expecto would enrich your plan with information from Atlassian resources (Jira and Confluence), but you need to first complete the PR review and return to plan editing.
 
 ### Next Steps
 Use **Accio** to return to the review task drafting state so you can re-execute the task and generate the missing results.
