Lumos transition responses

--- a/state-machine/responses/lumos_transitions/L16.md
+++ b/state-machine/responses/lumos_transitions/L16.md
@@ -6,7 +6,7 @@ You're in an error state because the task file is missing when you should be in 
 - `.ai/task/task.md`: Missing - this is causing the error
 
 ### Available Spells
-- **Accio**: Recovers from this error by creating a new task.md template
+- **Accio**: Recovers from this error by creating a new task
 - **Finite**: Returns to plan editing
 - **Lumos**: Shows your current state and available actions
 
