--- a/state-machine/responses/lumos_transitions/L17.md
+++ b/state-machine/responses/lumos_transitions/L17.md
@@ -17,4 +17,4 @@ You're in an error state because the task results file is missing when you shoul
 - **Expecto**: Not available during task execution phases. Expecto would enrich your plan with information from Atlassian resources (Jira and Confluence), but you first need to return to plan editing with **Finite**.
 
 ### Next Steps
-Use **Accio** to recover from this error. If task-results.md exists elsewhere, it will be used; otherwise, the incomplete task will be archived and a new task created.
+Use **Accio** to recover from this error. If task-results.md exists when it is cast, it will be used; otherwise, the incomplete task will be archived and a new task created.
