--- a/state-machine/responses/lumos_transitions/L19.md
+++ b/state-machine/responses/lumos_transitions/L19.md
@@ -7,13 +7,13 @@ You're in an error state because the PR comments file is missing when you're in 
 
 ### Available Spells
 - **Accio**: Recovers from this error by creating a new comments.md and gathering PR comments
-- **Finite**: Returns to plan editing, abandoning the PR review process
+- **Reverto**: Cancels the PR review process and returns to plan editing
 - **Lumos**: Shows your current state and available actions
 
 ### Unavailable Spells
-- **Reparo**: Not available until the error is resolved. Reparo would initiate a new PR review process, but you're already in one with an error. Use **Accio** to recreate the comments file or **Finite** to exit the PR review process.
-- **Reverto**: Not available in error states. Reverto would normally cancel the PR review process, but in this error state it's disabled for safety. Use **Accio** to recover or **Finite** to exit completely.
-- **Expecto**: Not available during PR review. Expecto would enrich your plan with information from Atlassian resources (Jira and Confluence), but you need to first exit the PR review flow with **Finite** and return to plan editing.
+- **Reparo**: Not available until the error is resolved. Reparo would initiate a new PR review process, but you're already in one with an error. Use **Accio** to recreate the comments file or **Reverto** to exit the PR review process.
+- **Finite**: Not available in this error state. Use **Reverto** instead to exit the PR review process and return to plan editing.
+- **Expecto**: Not available during PR review. Expecto would enrich your plan with information from Atlassian resources (Jira and Confluence), but you need to first exit the PR review flow with **Reverto** and return to plan editing.
 
 ### Next Steps
-Use **Accio** to create a new comments.md file and gather PR comments, or use **Finite** to abandon the PR review and return to plan editing.
+Use **Accio** to create a new comments.md file and gather PR comments, or use **Reverto** to abandon the PR review and return to plan editing.
