--- a/state-machine/responses/gather_transitions/G1.md
+++ b/state-machine/responses/gather_transitions/G1.md
@@ -1,6 +1,6 @@
 ## Response to the AI
 
-Read the ./ai/task/plan.md file to understand the plan. Guide the user through filling out the plan sections, especially the Acceptance Criteria section.
+Read the `.ai/task/plan.md` file to understand the plan. Guide the user through filling out the plan sections, especially the Acceptance Criteria section.
 
 ## Response to the Developer
 
@@ -17,4 +17,4 @@ We're now in the planning phase where we'll define what we want to accomplish.
 - **Lumos**: Show current state and available actions
 
 ### Next Steps
-Let's add at least one acceptance criterion to the plan.md file, then use Accio to start creating tasks.
+Let's add at least one acceptance criterion to the `.ai/task/plan.md` file, then use Accio to start creating tasks.
