--- a/state-machine/responses/gather_transitions/G2.md
+++ b/state-machine/responses/gather_transitions/G2.md
@@ -1,6 +1,6 @@
 ## Response to the AI
 
-Read the plan.md and the task.md file. Your goal is to propose the next smallest task that will help fulfill the remaining Acceptance Criteria in the plan and put it into the task.md file following its template.
+Read the `.ai/task/plan.md` and the `.ai/task/task.md` file. Your goal is to propose the next smallest task that will help fulfill the remaining Acceptance Criteria in the plan and put it into the `.ai/task/task.md` file following its template.
 
 ## Response to the Developer
 
