--- a/state-machine/responses/gather_transitions/G3.md
+++ b/state-machine/responses/gather_transitions/G3.md
@@ -1,6 +1,6 @@
 ## Response to the AI
 
-Inform the user that they need to add at least one Acceptance Criterion to plan.md before we can proceed with task creation.
+Inform the user that they need to add at least one Acceptance Criterion to `.ai/task/plan.md` before we can proceed with task creation.
 
 ## Response to the Developer
 
@@ -17,4 +17,4 @@ We're still in the planning phase. Before moving forward, we need to define what
 - **Lumos**: Show current state and available actions
 
 ### Next Steps
-Let's add at least one acceptance criterion to our plan.md file, then use Accio again to proceed to task creation.
+Let's add at least one acceptance criterion to our `.ai/task/plan.md` file, then use Accio again to proceed to task creation.
