--- a/state-machine/responses/gather_transitions/G4.md
+++ b/state-machine/responses/gather_transitions/G4.md
@@ -1,6 +1,6 @@
 ## Response to the AI
 
-Read the task.md file, summarize its content, and help the user continue refining it.
+Read the `.ai/task/task.md` file, summarize its content, and help the user continue refining it.
 
 Task Content:
 [TASK_CONTENT_PLACEHOLDER]
