--- a/state-machine/responses/pr_transitions/P2.md
+++ b/state-machine/responses/pr_transitions/P2.md
@@ -1,13 +1,13 @@
 ## Response to the AI
 
-Read the review-task.md file to understand what tasks need to be performed to address the PR comments. Execute each task in the review task file:
+Read the `.ai/task/review-task.md` file to understand what tasks need to be performed to address the PR comments. Execute each task in the review task file:
 
-1. Parse the task definitions from review-task.md
+1. Parse the task definitions from `.ai/task/review-task.md`
 2. For each task:
    - Make the required code changes
    - Document what was changed and why
    - Verify the change addresses the PR comment
-3. Document all results in review-task-results.md, including:
+3. Document all results in `.ai/task/review-task-results.md`, including:
    - Summary of all changes made
    - Code snippets of before/after for each change
    - Any challenges encountered and how they were resolved
