--- a/state-machine/responses/pr_transitions/P3.md
+++ b/state-machine/responses/pr_transitions/P3.md
@@ -1,7 +1,7 @@
 ## Response to the AI
 
 1. Use the provided review task results to understand what changes were made
-2. Update plan.md with a summary of these changes
+2. Update `.ai/task/plan.md` with a summary of these changes
 3. Guide the user on next steps for plan editing
 
 Review Task Results Content:
