--- a/state-machine/responses/universal_expecto/E4.md
+++ b/state-machine/responses/universal_expecto/E4.md
@@ -1,6 +1,6 @@
 a ## Response to the AI
 
-Inform the developer that all Atlassian URLs found in the plan.md file have already been processed. The MCP found Atlassian URLs but all of them were already present in the .ai/task/.atlassian-refs file, indicating they have been previously fetched and incorporated into the plan.
+Inform the developer that all Atlassian URLs found in the `.ai/task/plan.md` file have already been processed. The MCP found Atlassian URLs but all of them were already present in the .ai/task/.atlassian-refs file, indicating they have been previously fetched and incorporated into the plan.
 
 ## Response to the Developer
 
@@ -20,4 +20,4 @@ If you want to re-fetch information from specific Atlassian URLs:
 1. Edit the `.ai/task/.atlassian-refs` file and remove the URLs you want to process again
 2. Use **Expecto** again to re-fetch and incorporate that information
 
-Alternatively, add new Atlassian URLs to your plan.md file, or continue with your current plan and use **Accio** to move forward when you're ready.
+Alternatively, add new Atlassian URLs to your `.ai/task/plan.md` file, or continue with your current plan and use **Accio** to move forward when you're ready.
