--- a/state-machine/responses/achieve_transitions/A1.md
+++ b/state-machine/responses/achieve_transitions/A1.md
@@ -1,6 +1,6 @@
 ## Response to the AI
 
-Read the task.md file, understand the task details, and then execute the task. Document your process and results in a new task-results.md file. Include:
+Read the `.ai/task/task.md` file, understand the task details, and then execute the task. Document your process and results in a new `.ai/task/task-results.md` file. Include:
 
 1. A summary of the task
 2. Steps you took to complete it
@@ -11,7 +11,7 @@ Read the task.md file, understand the task details, and then execute the task. D
 ## Response to the Developer
 
 ### What Just Happened
-I've executed the task you defined and documented the results in the task-results.md file.
+I've executed the task you defined and documented the results in the `.ai/task/task-results.md` file.
 
 ### Where We Are
 We've completed the task execution phase. The results have been recorded and are ready for review.
@@ -23,4 +23,4 @@ We've completed the task execution phase. The results have been recorded and are
 - **Lumos**: Show current state and available actions
 
 ### Next Steps
-Review the task results I've documented. You can modify the task-results.md file directly or ask me to amend it if you'd like to add or remove anything. When you're satisfied with the results, use Accio to process them and determine what to tackle next.
+Review the task results I've documented. You can modify the `.ai/task/task-results.md` file directly or ask me to amend it if you'd like to add or remove anything. When you're satisfied with the results, use Accio to process them and determine what to tackle next.
