--- a/state-machine/responses/lumos_transitions/L18.md
+++ b/state-machine/responses/lumos_transitions/L18.md
@@ -5,7 +5,7 @@ You're in an error state because the plan file is missing when it's required for
 - `.ai/task/plan.md`: Missing - this is causing the error
 
 ### Available Spells
-- **Accio**: Recovers from this error by creating a new plan.md template
+- **Accio**: Recovers from this error by creating a new `.ai/task/plan.md` template
 - **Lumos**: Shows your current state and available actions
 
 ### Unavailable Spells
