--- a/state-machine/responses/lumos_transitions/L19.md
+++ b/state-machine/responses/lumos_transitions/L19.md
@@ -6,7 +6,7 @@ You're in an error state because the PR comments file is missing when you're in 
 - `.ai/task/comments.md`: Missing - this is causing the error
 
 ### Available Spells
-- **Accio**: Recovers from this error by creating a new comments.md and gathering PR comments
+- **Accio**: Recovers from this error by creating a new `.ai/task/comments.md` and gathering PR comments
 - **Reverto**: Cancels the PR review process and returns to plan editing
 - **Lumos**: Shows your current state and available actions
 
@@ -16,4 +16,4 @@ You're in an error state because the PR comments file is missing when you're in 
 - **Expecto**: Not available during PR review. Expecto would enrich your plan with information from Atlassian resources (Jira and Confluence), but you need to first exit the PR review flow with **Reverto** and return to plan editing.
 
 ### Next Steps
-Use **Accio** to create a new comments.md file and gather PR comments, or use **Reverto** to abandon the PR review and return to plan editing.
+Use **Accio** to create a new `.ai/task/comments.md` file and gather PR comments, or use **Reverto** to abandon the PR review and return to plan editing.
