--- a/state-machine/responses/lumos_transitions/L20.md
+++ b/state-machine/responses/lumos_transitions/L20.md
@@ -7,7 +7,7 @@ You're in an error state because the PR review task file is missing when you're 
 - `.ai/task/review-task.md`: Missing - this is causing the error
 
 ### Available Spells
-- **Accio**: Recovers from this error by creating a new review-task.md template based on comments.md
+- **Accio**: Recovers from this error by creating a new `.ai/task/review-task.md` template based on `.ai/task/comments.md`
 - **Lumos**: Shows your current state and available actions
 
 ### Unavailable Spells
