--- a/state-machine/responses/pr_transitions/P1.md
+++ b/state-machine/responses/pr_transitions/P1.md
@@ -1,10 +1,10 @@
 ## Response to the AI
 
-Read the comments.md file containing PR comments and the review-task.md template file. The review-task.md template has a predefined structure - follow this structure to fill in tasks that address each PR comment.
+Read the `.ai/task/comments.md` file containing PR comments and the `.ai/task/review-task.md` template file. The `.ai/task/review-task.md` template has a predefined structure - follow this structure to fill in tasks that address each PR comment.
 
-For each comment in comments.md:
+For each comment in `.ai/task/comments.md`:
 1. Analyze the comment to understand what changes are requested
-2. Add a task to review-task.md following the template format
+2. Add a task to `.ai/task/review-task.md` following the template format
 3. Include specific acceptance criteria for each task
 
 ## Response to the Developer
@@ -21,4 +21,4 @@ We're now in the PR review task drafting phase where we'll plan how to address e
 - **Lumos**: Show current state and available actions
 
 ### Next Steps
-Review the tasks I've created in review-task.md, make any adjustments needed, then use Accio to execute them and apply the requested changes.
+Review the tasks I've created in `.ai/task/review-task.md`, make any adjustments needed, then use Accio to execute them and apply the requested changes.
