--- a/state-machine/responses/universal_expecto/E2.md
+++ b/state-machine/responses/universal_expecto/E2.md
@@ -1,6 +1,6 @@
 ## Response to the AI
 
-You have been provided with a list of Atlassian URLs from the plan.md file that have not been processed yet:
+You have been provided with a list of Atlassian URLs from the `.ai/task/plan.md` file that have not been processed yet:
 
 [ATLASSIAN_URLS_PLACEHOLDER]
 
