--- a/state-machine/responses/universal_expecto/E3.md
+++ b/state-machine/responses/universal_expecto/E3.md
@@ -1,6 +1,6 @@
 ## Response to the AI
 
-Inform the developer that no Atlassian URLs were found in the plan.md file. The MCP has checked the plan.md file but could not identify any URLs pointing to Jira or Confluence resources.
+Inform the developer that no Atlassian URLs were found in the `.ai/task/plan.md` file. The MCP has checked the `.ai/task/plan.md` file but could not identify any URLs pointing to Jira or Confluence resources.
 
 ## Response to the Developer
 
@@ -17,7 +17,7 @@ We're still in the planning phase, but without any Atlassian resources to enrich
 
 ### Next Steps
 If you want to enrich your plan with Jira or Confluence information:
-1. Add URLs to Jira tickets or Confluence pages in your plan.md file
+1. Add URLs to Jira tickets or Confluence pages in your `.ai/task/plan.md` file
 2. Use **Expecto** again to fetch and incorporate that information
 
 Alternatively, continue with your current plan and use **Accio** to move forward when you're ready.
