Fix response file paths

--- a/state-machine/responses/achieve_transitions/A1.md
+++ b/state-machine/responses/achieve_transitions/A1.md
@@ -23,4 +23,4 @@ We've completed the task execution phase. The results have been recorded and are
 - **Lumos**: Show current state and available actions
 
 ### Next Steps
-Review the task results I've documented. You can modify the `.ai/task/task-results.md` file directly or ask me to amend it if you'd like to add or remove anything. When you're satisfied with the results, use Accio to process them and determine what to tackle next.
+Review the `.ai/task/task.md` file results I've documented. You can modify the `.ai/task/task-results.md` file directly or ask me to amend it if you'd like to add or remove anything. When you're satisfied with the results, use Accio to process them and determine what to tackle next.
