--- a/state-machine/responses/achieve_transitions/A3.md
+++ b/state-machine/responses/achieve_transitions/A3.md
@@ -5,10 +5,10 @@ Inform the developer that the system has determined all acceptance criteria have
 ## Response to the Developer
 
 ### What Just Happened
-All acceptance criteria in the plan have been completed!
+All acceptance criteria in the `.ai/task/plan.md` file have been completed!
 
 ### Where We Are
-We've successfully completed all the acceptance criteria defined in the plan.
+We've successfully completed all the acceptance criteria defined in the `.ai/task/plan.md` file.
 
 ### Available Spells
 - **Finite**: Return to plan editing to add more acceptance criteria if needed
