--- a/state-machine/responses/achieve_transitions/A4.md
+++ b/state-machine/responses/achieve_transitions/A4.md
@@ -5,7 +5,7 @@ Remind the developer that all acceptance criteria are complete and explain their
 ## Response to the Developer
 
 ### What Just Happened
-You cast Accio, but all acceptance criteria in the plan have already been completed.
+You cast Accio, but all acceptance criteria in the `.ai/task/plan.md` file have already been completed.
 
 ### Where We Are
 We remain in the completion phase, with all acceptance criteria met.
