--- a/state-machine/responses/error_recovery/R2.md
+++ b/state-machine/responses/error_recovery/R2.md
@@ -8,11 +8,11 @@ Read the `.ai/task/task-results.md` file to understand what was completed in the
 I've found the task results and updated our plan with the completed work. The previous task has been archived to [ARCHIVE_PATH_PLACEHOLDER] and a new task has been created at `.ai/task/task.md`.
 
 ### Where We Are
-We're now in the task drafting phase with a new task based on the results of the previous work.
+We're now drafting a new task in `.ai/task/task.md` based on the results of the previous work.
 
 ### Available Spells
 - **Accio**: Execute this task and document the results
-- **Finite**: Return to plan editing if you need to modify the plan
+- **Finite**: Return to plan editing if you need to modify the `.ai/task/plan.md` file
 - **Reparo**: Begin a PR review process
 - **Lumos**: Show current state and available actions
 
