--- a/state-machine/responses/error_recovery/R3.md
+++ b/state-machine/responses/error_recovery/R3.md
@@ -8,13 +8,13 @@ Read the `.ai/task/plan.md` file to identify uncompleted acceptance criteria. Fi
 I've archived the incomplete task to [INCOMPLETE_ARCHIVE_PATH_PLACEHOLDER] and filled out the new task template at `.ai/task/task.md` since the previous task results file was missing.
 
 ### Where We Are
-We're back in the task drafting phase with a fresh task based on our plan's remaining acceptance criteria.
+We're back in the `.ai/task/task.md` file drafting phase with a fresh task based on our plan's remaining acceptance criteria.
 
 ### Available Spells
 - **Accio**: Execute this task and document the results
-- **Finite**: Return to plan editing if you need to modify the plan
+- **Finite**: Return to plan editing if you need to modify the `.ai/task/plan.md` file
 - **Reparo**: Begin a PR review process
 - **Lumos**: Show current state and available actions
 
 ### Next Steps
-Let's review this task in `.ai/task/task.md` and make any necessary adjustments before executing it with Accio.
+Let's review the `.ai/task/task.md` file in `.ai/task/task.md` and make any necessary adjustments before executing it with Accio.
