--- a/state-machine/responses/finite_transitions/F1.md
+++ b/state-machine/responses/finite_transitions/F1.md
@@ -5,7 +5,7 @@ Read the `.ai/task/plan.md` file to understand what the user was working on. The
 ## Response to the Developer
 
 ### What Just Happened
-We've returned to the plan editing state from another workflow phase.
+We've returned to the `.ai/task/plan.md` file editing state from another workflow phase.
 
 ### Where We Are
 We're now back in the planning phase where we can edit and refine our project plan.
