--- a/state-machine/responses/finite_transitions/F2.md
+++ b/state-machine/responses/finite_transitions/F2.md
@@ -1,6 +1,6 @@
 ## Response to the AI
 
-Read the `.ai/task/plan.md` file to understand what the user was working on. Note that all acceptance criteria in the plan have been completed. Guide the user on what they can do next, such as adding new acceptance criteria or starting a PR review.
+Read the `.ai/task/plan.md` file to understand what the user was working on. Note that all acceptance criteria in the `.ai/task/plan.md` file have been completed. Guide the user on what they can do next, such as adding new acceptance criteria or starting a PR review.
 
 ## Response to the Developer
 
@@ -20,4 +20,4 @@ We're now back in the planning phase where we can celebrate our progress and dec
 Congratulations on completing all acceptance criteria! You can now:
 1. Add new acceptance criteria to `.ai/task/plan.md` if you want to continue development
 2. Use Reparo to start a PR review process for the work completed
-3. Review the plan in `.ai/task/plan.md` to see everything that was accomplished
+3. Review the `.ai/task/plan.md` file to see everything that was accomplished
