--- a/state-machine/responses/gather_transitions/G2.md
+++ b/state-machine/responses/gather_transitions/G2.md
@@ -1,6 +1,6 @@
 ## Response to the AI
 
-Read the `.ai/task/plan.md` and the `.ai/task/task.md` file. Your goal is to propose the next smallest task that will help fulfill the remaining Acceptance Criteria in the plan and put it into the `.ai/task/task.md` file following its template.
+Read the `.ai/task/plan.md` and the `.ai/task/task.md` file. Your goal is to propose the next smallest task that will help fulfill the remaining Acceptance Criteria in the `.ai/task/plan.md` file and put it into the `.ai/task/task.md` file following its template.
 
 ## Response to the Developer
 
@@ -8,11 +8,11 @@ Read the `.ai/task/plan.md` and the `.ai/task/task.md` file. Your goal is to pro
 We've created a task document based on our plan's acceptance criteria.
 
 ### Where We Are
-We're now in the task drafting phase where we'll define the specific work to be done.
+We're now drafting a task in `.ai/task/task.md` where we'll define the specific work to be done.
 
 ### Available Spells
 - **Accio**: Execute the defined task and document results
-- **Finite**: Return to plan editing if we need to modify our plan
+- **Finite**: Return to plan editing if we need to modify the `.ai/task/plan.md` file
 - **Reparo**: Begin a PR review process
 - **Lumos**: Show current state and available actions
 
