--- a/state-machine/responses/gather_transitions/G4.md
+++ b/state-machine/responses/gather_transitions/G4.md
@@ -11,11 +11,11 @@ Task Content:
 We've found an existing task document that we were working on previously.
 
 ### Where We Are
-We're now in the task drafting phase with our previously created task.
+We're now drafting our previously created task in `.ai/task/task.md`.
 
 ### Available Spells
 - **Accio**: Execute the defined task and document results
-- **Finite**: Return to plan editing if we need to modify our plan
+- **Finite**: Return to plan editing if we need to modify the `.ai/task/plan.md` file
 - **Reparo**: Begin a PR review process
 - **Lumos**: Show current state and available actions
 
