--- a/state-machine/responses/gather_transitions/G5.md
+++ b/state-machine/responses/gather_transitions/G5.md
@@ -40,7 +40,7 @@ We're now in the PR review flow where we need to address the feedback in these c
 - **Lumos**: Show current state and available actions
 
 ### Next Steps
-Review the comments I've gathered, then use Accio to create tasks that address this feedback.
+Review the `.ai/task/comments.md` file I've gathered, then use Accio to create tasks that address this feedback.
 
 ### No Comments Found Response:
 
