--- a/state-machine/responses/lumos_transitions/L10.md
+++ b/state-machine/responses/lumos_transitions/L10.md
@@ -18,4 +18,4 @@ You have completed PR review tasks and need to archive the results before contin
 - **Expecto**: Not available during PR review. Expecto would enrich your plan with information from Atlassian resources (Jira and Confluence), but you need to first archive your review results with **Accio** and return to plan editing.
 
 ### Next Steps
-Use **Accio** to archive your PR review results, update the plan with a summary of changes made, and return to plan editing.
+Use **Accio** to archive your PR review results, update the `.ai/task/plan.md` file with a summary of changes made, and return to plan editing.
