--- a/state-machine/responses/lumos_transitions/L16.md
+++ b/state-machine/responses/lumos_transitions/L16.md
@@ -1,5 +1,5 @@
 ### Where We Are
-You're in an error state because the task file is missing when you should be in task drafting.
+You're in an error state because the `.ai/task/task.md` file is missing when you should be in task drafting.
 
 **Key Files:**
 - `.ai/task/plan.md`: Your project plan with acceptance criteria
