--- a/state-machine/responses/lumos_transitions/L19.md
+++ b/state-machine/responses/lumos_transitions/L19.md
@@ -1,5 +1,5 @@
 ### Where We Are
-You're in an error state because the PR comments file is missing when you're in the PR comments gathering phase. You entered the PR review from plan editing.
+You're in an error state because the `.ai/task/comments.md` file is missing when you're in the PR comments gathering phase. You entered the PR review from plan editing.
 
 **Key Files:**
 - `.ai/task/plan.md`: Your project plan with acceptance criteria
@@ -11,7 +11,7 @@ You're in an error state because the PR comments file is missing when you're in 
 - **Lumos**: Shows your current state and available actions
 
 ### Unavailable Spells
-- **Reparo**: Not available until the error is resolved. Reparo would initiate a new PR review process, but you're already in one with an error. Use **Accio** to recreate the comments file or **Reverto** to exit the PR review process.
+- **Reparo**: Not available until the error is resolved. Reparo would initiate a new PR review process, but you're already in one with an error. Use **Accio** to recreate the `.ai/task/comments.md` file or **Reverto** to exit the PR review process.
 - **Finite**: Not available in this error state. Use **Reverto** instead to exit the PR review process and return to plan editing.
 - **Expecto**: Not available during PR review. Expecto would enrich your plan with information from Atlassian resources (Jira and Confluence), but you need to first exit the PR review flow with **Reverto** and return to plan editing.
 
