--- a/state-machine/responses/lumos_transitions/L20.md
+++ b/state-machine/responses/lumos_transitions/L20.md
@@ -1,5 +1,5 @@
 ### Where We Are
-You're in an error state because the PR review task file is missing when you're in the PR review task drafting phase. You entered the PR review from plan editing.
+You're in an error state because the `.ai/task/review-task.md` file is missing when you're in the PR review task drafting phase. You entered the PR review from plan editing.
 
 **Key Files:**
 - `.ai/task/plan.md`: Your project plan with acceptance criteria
@@ -12,7 +12,7 @@ You're in an error state because the PR review task file is missing when you're 
 
 ### Unavailable Spells
 - **Finite**: Not available until the error is resolved. Finite would return you to plan editing, but you need to first recover from this error state by using **Accio** to create a new review task.
-- **Reparo**: Not available until the error is resolved. Reparo would initiate a new PR review process, but you're already in one with an error. Use **Accio** to recreate the review task file first.
+- **Reparo**: Not available until the error is resolved. Reparo would initiate a new PR review process, but you're already in one with an error. Use **Accio** to recreate the `.ai/task/review-task.md` file first.
 - **Reverto**: Not available in error states. Reverto would normally cancel the PR review process, but in this error state it's disabled for safety. Use **Accio** to recover first.
 - **Expecto**: Not available during PR review. Expecto would enrich your plan with information from Atlassian resources (Jira and Confluence), but you need to first complete or cancel the PR review process.
 
