--- a/state-machine/responses/lumos_transitions/L3.md
+++ b/state-machine/responses/lumos_transitions/L3.md
@@ -1,5 +1,5 @@
 ### Where We Are
-You are in the task drafting phase where you define a specific task to achieve an acceptance criterion.
+You are in the `.ai/task/task.md` file drafting phase where you define a specific task to achieve an acceptance criterion.
 
 **Key Files:**
 - `.ai/task/plan.md`: Your project plan with acceptance criteria
@@ -7,13 +7,13 @@ You are in the task drafting phase where you define a specific task to achieve a
 
 ### Available Spells
 - **Accio**: Executes the current task and documents results
-- **Finite**: Returns to plan editing if you need to modify your plan
+- **Finite**: Returns to plan editing if you need to modify the `.ai/task/plan.md` file
 - **Reparo**: Initiates a PR review process to gather PR comments
 - **Lumos**: Shows your current state and available actions
 
 ### Unavailable Spells
 - **Reverto**: Not available because you're not in a PR review workflow
-- **Expecto**: Not available during task execution phases. Expecto would enrich your plan with information from Atlassian resources (Jira and Confluence). Use **Finite** to return to plan editing first, and then you can use Expecto if you have Atlassian URLs in your plan.
+- **Expecto**: Not available during task execution phases. Expecto would enrich your plan with information from Atlassian resources (Jira and Confluence). Use **Finite** to return to plan editing first, and then you can use Expecto if you have Atlassian URLs in the `.ai/task/plan.md` file.
 
 ### Next Steps
 Review and refine the task in `.ai/task/task.md`, then use **Accio** to execute it when ready. If you need to adjust your plan first, use **Finite** to return to plan editing.
