--- a/state-machine/responses/lumos_transitions/L6.md
+++ b/state-machine/responses/lumos_transitions/L6.md
@@ -16,4 +16,4 @@ You are in the PR review comments gathering phase after entering from plan editi
 - **Expecto**: Not available during PR review. Expecto would enrich your plan with information from Atlassian resources (Jira and Confluence), but you need to exit the PR review flow first with **Reverto** or **Finite**, then use Expecto during plan editing.
 
 ### Next Steps
-Review the comments in `.ai/task/comments.md`, then use **Accio** to create tasks to address these comments. If you want to exit the PR review flow, use **Reverto**.
+Review the `.ai/task/comments.md` file, then use **Accio** to create tasks to address these comments. If you want to exit the PR review flow, use **Reverto**.
