--- a/state-machine/responses/pr_transitions/P2.md
+++ b/state-machine/responses/pr_transitions/P2.md
@@ -1,6 +1,6 @@
 ## Response to the AI
 
-Read the `.ai/task/review-task.md` file to understand what tasks need to be performed to address the PR comments. Execute each task in the review task file:
+Read the `.ai/task/review-task.md` file to understand what tasks need to be performed to address the PR comments. Execute each task in the `.ai/task/review-task.md` file:
 
 1. Parse the task definitions from `.ai/task/review-task.md`
 2. For each task:
@@ -19,11 +19,11 @@ Read the `.ai/task/review-task.md` file to understand what tasks need to be perf
 I've applied the changes from the review tasks and documented the results.
 
 ### Where We Are
-We've completed implementing the PR feedback. The results are documented in review-task-results.md.
+We've completed implementing the PR feedback. The results are documented in `.ai/task/review-task-results.md`.
 
 ### Available Spells
 - **Accio**: Archive these PR review results and return to your previous workflow
 - **Lumos**: Show current state and available actions
 
 ### Next Steps
-Review the changes I've made in review-task-results.md. If everything looks good, use Accio to archive these results and return to your previous workflow.
+Review the changes I've made in `.ai/task/review-task-results.md`. If everything looks good, use Accio to archive these results and return to your previous workflow.
