--- a/state-machine/responses/pr_transitions/P3.md
+++ b/state-machine/responses/pr_transitions/P3.md
@@ -13,7 +13,7 @@ Review Task Results Content:
 I've archived the PR review results and updated our plan with a summary of the changes made.
 
 ### Where We Are
-We're back in the plan editing phase where we can continue refining our acceptance criteria.
+We're back in the `.ai/task/plan.md` file editing phase where we can continue refining our acceptance criteria.
 
 ### Available Spells
 - **Accio**: Move to task creation after adding at least one acceptance criterion
@@ -22,4 +22,4 @@ We're back in the plan editing phase where we can continue refining our acceptan
 - **Lumos**: Show current state and available actions
 
 ### Next Steps
-Review the plan updates I've made based on the PR feedback. You can continue editing the plan and when ready, use Accio to create a new task.
+Review the `.ai/task/plan.md` file updates I've made based on the PR feedback. You can continue editing the plan and when ready, use Accio to create a new task.
