--- a/state-machine/responses/universal_expecto/E1.md
+++ b/state-machine/responses/universal_expecto/E1.md
@@ -36,7 +36,7 @@ We're in the initial planning phase, where we're creating a new plan document wi
 - **Lumos**: Show current state and available actions
 
 ### Next Steps
-Review the enriched information I've added to our plan from your Atlassian resources. Then use **Accio** to create the plan document when you're ready to start defining your project goals.
+Review the enriched information I've added to the `.ai/task/plan.md` file from your Atlassian resources. Then use **Accio** to create the plan document when you're ready to start defining your project goals.
 
 ### Atlassian Integration Unavailable Response:
 
