--- a/state-machine/responses/universal_expecto/E4.md
+++ b/state-machine/responses/universal_expecto/E4.md
@@ -1,14 +1,14 @@
 a ## Response to the AI
 
-Inform the developer that all Atlassian URLs found in the `.ai/task/plan.md` file have already been processed. The MCP found Atlassian URLs but all of them were already present in the .ai/task/.atlassian-refs file, indicating they have been previously fetched and incorporated into the plan.
+Inform the developer that all Atlassian URLs found in the `.ai/task/plan.md` file have already been processed. The MCP found Atlassian URLs but all of them were already present in the .ai/task/.atlassian-refs file, indicating they have been previously fetched and incorporated into the `.ai/task/plan.md` file.
 
 ## Response to the Developer
 
 ### What Just Happened
-I checked for new Atlassian URLs in our plan, but all the URLs have already been processed and their content incorporated into the plan.
+I checked for new Atlassian URLs in the `.ai/task/plan.md` file, but all the URLs have already been processed and their content incorporated into the `.ai/task/plan.md` file.
 
 ### Where We Are
-We're still in the planning phase with all referenced Atlassian resources already enriched in our plan.
+We're still in the planning phase with all referenced Atlassian resources already enriched in the `.ai/task/plan.md` file.
 
 ### Available Spells
 - **Accio**: Progress to the next step (create plan or task based on your current state)
