--- a/state-machine/responses/error_recovery/R1.md
+++ b/state-machine/responses/error_recovery/R1.md
@@ -1,6 +1,6 @@
 ## Response to the AI
 
-Read the `.ai/task/plan.md` file to understand the project goals and acceptance criteria. Use the template in `.ai/task/task.md` that the MCP has created for you to propose a new task based on the next uncompleted acceptance criterion in the plan.
+Read the `.ai/task/plan.md` file to understand the project goals and acceptance criteria. Use the template in `.ai/task/task.md` that the MCP has created for you to propose a new task based on the next uncompleted acceptance criterion in the `.ai/task/plan.md` file.
 
 ## Response to the Developer
 
@@ -8,11 +8,11 @@ Read the `.ai/task/plan.md` file to understand the project goals and acceptance 
 I've created a new task file at `.ai/task/task.md` since the previous one was missing.
 
 ### Where We Are
-We're now back in the task drafting phase where we can define what work needs to be done next.
+We're now back in the `.ai/task/task.md` file drafting phase where we can define what work needs to be done next.
 
 ### Available Spells
 - **Accio**: Execute this task and document the results
-- **Finite**: Return to plan editing if you need to modify the plan
+- **Finite**: Return to plan editing if you need to modify the `.ai/task/plan.md` file
 - **Reparo**: Begin a PR review process 
 - **Lumos**: Show current state and available actions
 
