--- a/state-machine/responses/lumos_transitions/L17.md
+++ b/state-machine/responses/lumos_transitions/L17.md
@@ -1,5 +1,5 @@
 ### Where We Are
-You're in an error state because the task results file is missing when you should have task execution results.
+You're in an error state because the `.ai/task/task results.md` file is missing when you should have task execution results.
 
 **Key Files:**
 - `.ai/task/plan.md`: Your project plan with acceptance criteria
