--- a/state-machine/responses/lumos_transitions/L18.md
+++ b/state-machine/responses/lumos_transitions/L18.md
@@ -1,5 +1,5 @@
 ### Where We Are
-You're in an error state because the plan file is missing when it's required for your current workflow.
+You're in an error state because the `.ai/task/plan.md` file is missing when it's required for your current workflow.
 
 **Key Files:**
 - `.ai/task/plan.md`: Missing - this is causing the error
