--- a/state-machine/responses/lumos_transitions/L2.md
+++ b/state-machine/responses/lumos_transitions/L2.md
@@ -1,12 +1,12 @@
 ### Where We Are
-You are in the plan editing phase where you define acceptance criteria and project goals.
+You are in the `.ai/task/plan.md` file editing phase where you define acceptance criteria and project goals.
 
 **Key Files:**
 - `.ai/task/plan.md`: Your project plan with acceptance criteria
 
 ### Available Spells
 - **Accio**: Creates a task based on your plan if you have at least one acceptance criterion, or prompts you to add criteria if none exist
-- **Expecto**: Enriches your plan with information from Atlassian resources (if you have Atlassian URLs in your plan)
+- **Expecto**: Enriches your plan with information from Atlassian resources (if you have Atlassian URLs in the `.ai/task/plan.md` file)
 - **Reparo**: Initiates a PR review process to gather PR comments
 - **Finite**: Has no effect as you're already in plan editing phase
 - **Lumos**: Shows your current state and available actions
@@ -15,4 +15,4 @@ You are in the plan editing phase where you define acceptance criteria and proje
 - **Reverto**: Not available because you're not in a PR review workflow. Reverto is used to exit the PR review process and return to your previous workflow, but you haven't started a PR review yet.
 
 ### Next Steps
-Add at least one acceptance criterion to your plan and then use **Accio** to start creating tasks, or use **Expecto** if you have Atlassian links in your plan that you'd like to enrich with more information.
+Add at least one acceptance criterion to the `.ai/task/plan.md` file and then use **Accio** to start creating tasks, or use **Expecto** if you have Atlassian links in the `.ai/task/plan.md` file that you'd like to enrich with more information.
