--- a/state-machine/responses/lumos_transitions/L21.md
+++ b/state-machine/responses/lumos_transitions/L21.md
@@ -1,5 +1,5 @@
 ### Where We Are
-You're in an error state because the PR review task results file is missing when you should have review task execution results. You entered the PR review from plan editing.
+You're in an error state because the `.ai/task/review-task-results.md` file is missing when you should have review task execution results. You entered the PR review from plan editing.
 
 **Key Files:**
 - `.ai/task/plan.md`: Your project plan with acceptance criteria
