--- a/state-machine/responses/lumos_transitions/L5.md
+++ b/state-machine/responses/lumos_transitions/L5.md
@@ -1,5 +1,5 @@
 ### Where We Are
-You have completed all acceptance criteria in your plan! All tasks have been successfully executed.
+You have completed all acceptance criteria in the `.ai/task/plan.md` file! All tasks have been successfully executed.
 
 **Key Files:**
 - `.ai/task/plan.md`: Your project plan with all acceptance criteria checked off
@@ -12,7 +12,7 @@ You have completed all acceptance criteria in your plan! All tasks have been suc
 
 ### Unavailable Spells
 - **Reverto**: Not available because you're not in a PR review workflow. Reverto is used to exit the PR review process and return to your previous workflow, but you haven't started a PR review yet.
-- **Expecto**: Not available during task execution phases. Expecto would enrich your plan with information from Atlassian resources (Jira and Confluence). Use **Finite** to return to plan editing first, and then you can use Expecto if you have Atlassian URLs in your plan.
+- **Expecto**: Not available during task execution phases. Expecto would enrich your plan with information from Atlassian resources (Jira and Confluence). Use **Finite** to return to plan editing first, and then you can use Expecto if you have Atlassian URLs in the `.ai/task/plan.md` file.
 
 ### Next Steps
 Use **Finite** to return to plan editing and add more acceptance criteria if needed, or **Reparo** to start a PR review process.
