--- a/state-machine/responses/universal_expecto/E2.md
+++ b/state-machine/responses/universal_expecto/E2.md
@@ -28,7 +28,7 @@ Based on Atlassian MCP availability:
 I've enriched our plan with additional information from the Atlassian resources you referenced.
 
 ### Where We Are
-We're in the plan editing phase, where we're refining our project goals and acceptance criteria with information from Jira and/or Confluence resources.
+We're in the `.ai/task/plan.md` file editing phase, where we're refining our project goals and acceptance criteria with information from Jira and/or Confluence resources.
 
 ### Available Spells
 - **Accio**: Progress to task creation once we have defined at least one acceptance criterion
@@ -45,7 +45,7 @@ Review the additional information I've incorporated from your Atlassian resource
 I attempted to enrich the plan with information from Atlassian resources, but the Atlassian integration is not available or configured.
 
 ### Where We Are
-We're in the plan editing phase, but without access to the Atlassian integration to pull in additional information.
+We're in the `.ai/task/plan.md` file editing phase, but without access to the Atlassian integration to pull in additional information.
 
 ### Available Spells
 - **Accio**: Progress to task creation once we have defined at least one acceptance criterion
