--- a/state-machine/responses/universal_expecto/E3.md
+++ b/state-machine/responses/universal_expecto/E3.md
@@ -5,14 +5,14 @@ Inform the developer that no Atlassian URLs were found in the `.ai/task/plan.md`
 ## Response to the Developer
 
 ### What Just Happened
-I checked for Atlassian URLs (Jira or Confluence links) in our plan, but couldn't find any.
+I checked for Atlassian URLs (Jira or Confluence links) in the `.ai/task/plan.md` file, but couldn't find any.
 
 ### Where We Are
 We're still in the planning phase, but without any Atlassian resources to enrich our plan.
 
 ### Available Spells
 - **Accio**: Progress to the next step (create plan or task based on your current state)
-- **Expecto**: Will only work if you add Atlassian URLs to the plan
+- **Expecto**: Will only work if you add Atlassian URLs to the `.ai/task/plan.md` file
 - **Lumos**: Show current state and available actions
 
 ### Next Steps
